# predict-pizza-price

./: .gitignore  README.md  app.py  pyproject.toml  testes.ipynb
