[project]
name = "projeto-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "leonardoferreira10",email = "leonardoferreira506@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_ml", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
